Adding the About header.

--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Try Git</h1>
+
+    <h3>About us</h3>
+    <div class='about'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt debitis deleniti sed aliquid. Laboriosam fugit veniam repellat, voluptas asperiores placeat assumenda reprehenderit non cumque ab voluptate. Dignissimos asperiores minus dolores.</div>
 </body>
 </html>
