Adding new stylesheet.

--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Try Git</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Try Git</h1>
+    <h1>Try Git & Github heading</h1>
 
     <h3>About us</h3>
     <div class='about'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt debitis deleniti sed aliquid. Laboriosam fugit veniam repellat, voluptas asperiores placeat assumenda reprehenderit non cumque ab voluptate. Dignissimos asperiores minus dolores.</div>
+    <p>This is the new paragraph.</p>
 </body>
 </html>
